--- a/assets/css/_layout.shared.scss
+++ b/assets/css/_layout.shared.scss
@@ -56,9 +56,12 @@ a, button {
   text-decoration: none;
   border: none;
 
-
   &:hover {
     text-decoration: none;
+  }
+
+  &:focus {
+    outline: none;
   }
 }
 
@@ -68,7 +71,7 @@ a, button {
   }
 }
 
-.button-green-main {
+.button-green {
   padding: 0 20px;
   background-color: $green-main;
   color: white;
@@ -90,6 +93,43 @@ a, button {
 
   &:hover {
     color: $green-main;
+  }
+}
+
+.button-blue {
+  background-color: $blue-main;
+  color: white;
+  font-weight: 600;
+  height: 40px;
+  @include border-radius(8px);
+
+  &:hover {
+    color: white;
+  }
+}
+
+.button-red {
+  background-color: $red-main;
+  color: white;
+  font-weight: 600;
+  height: 40px;
+  @include border-radius(8px);
+
+  &:hover {
+    color: white;
+  }
+}
+
+.button-white {
+  background-color: white;
+  color: $grey-text;
+  font-weight: 600;
+  height: 40px;
+  border: 1px solid $grey-text-input;
+  @include border-radius(8px);
+
+  &:hover {
+    color: $grey-text;
   }
 }
 
@@ -137,113 +177,84 @@ textarea {
   }
 }
 
-//.form-input-title {
-//  padding-left: 15px;
-//  text-align: left;
-//  color: $grey-title;
-//  font-size: 1rem;
-//  font-weight: 600;
-//  line-height: 22px;
-//  text-transform: uppercase;
-//}
-//
-//.form-input {
-//  padding: 0 20px;
-//  height: 50px;
-//  border: 1px solid $grey-line;
-//  border-radius: 8px;
-//  background-color: $green-light;
-//  font-size: 18px;
-//  color: $grey-text-input;
-//}
-//
-//.form-input-textarea {
-//  padding: 5px 20px;
-//  border: 1px solid $grey-line;
-//  border-radius: 8px;
-//  background-color: $green-light;
-//  font-size: 18px;
-//  color: $grey-text-input;
-//}
-
 /* custom checkbox */
-.check-label {
-  margin-top: 8px;
-  display: block;
-  position: relative;
-  cursor: pointer;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  color: $grey-dark;
-  @include user-select(none);
-
-  &:checked {
-    color: $green-main;
-  }
-
-  input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-
-    &:checked ~ .check-mark {
-      background-color: $green-main;
-      border: none;
-
-      &:after {
-        display: block;
-      }
-    }
-  }
-
-  .check-mark {
-    @include position(absolute, $top: 2px, $left: 0);
-    @include border-radius(4px);
-    height: 20px;
-    width: 20px;
-    border: 2px solid $green-main;
-    background-color: white;
-
-    &:after {
-      content: "";
-      display: none;
-      @include position(absolute, $top: 2px, $left: 6px);
-      width: 8px;
-      height: 12px;
-      border: solid white;
-      border-width: 0 2px 2px 0;
-      @include rotate(45deg);
-    }
-  }
-
-  .check-mark-error {
-    @extend .check-mark;
-    border: 2px solid $red-main;
-  }
-}
-
-.check-label-round {
-  @extend .check-label;
-  margin-top: 0;
-
-  input {
-    @include position(absolute, $right: 100%);
-    opacity: 0;
-  }
-
-  .check-mark {
-    @include border-radius(50%);
-    height: 30px;
-    width: 30px;
-
-    &:after {
-      @include position(absolute, $top: 5px, $left: 10px);
-      width: 10px;
-      height: 16px;
-      border-width: 0 3px 3px 0;
-    }
-  }
-}
+//.check-label {
+//  margin-top: 8px;
+//  display: block;
+//  position: relative;
+//  cursor: pointer;
+//  padding-left: 35px;
+//  margin-bottom: 12px;
+//  color: $grey-dark;
+//  @include user-select(none);
+//
+//  &:checked {
+//    color: $green-main;
+//  }
+//
+//  input {
+//    position: absolute;
+//    opacity: 0;
+//    cursor: pointer;
+//
+//    &:checked ~ .check-mark {
+//      background-color: $green-main;
+//      border: none;
+//
+//      &:after {
+//        display: block;
+//      }
+//    }
+//  }
+//
+//  .check-mark {
+//    @include position(absolute, $top: 2px, $left: 0);
+//    @include border-radius(4px);
+//    height: 20px;
+//    width: 20px;
+//    border: 2px solid $green-main;
+//    background-color: white;
+//
+//    &:after {
+//      content: "";
+//      display: none;
+//      @include position(absolute, $top: 2px, $left: 6px);
+//      width: 8px;
+//      height: 12px;
+//      border: solid white;
+//      border-width: 0 2px 2px 0;
+//      @include rotate(45deg);
+//    }
+//  }
+//
+//  .check-mark-error {
+//    @extend .check-mark;
+//    border: 2px solid $red-main;
+//  }
+//}
+//
+//.check-label-round {
+//  @extend .check-label;
+//  margin-top: 0;
+//
+//  input {
+//    @include position(absolute, $right: 100%);
+//    opacity: 0;
+//  }
+//
+//  .check-mark {
+//    @include border-radius(50%);
+//    height: 30px;
+//    width: 30px;
+//
+//    &:after {
+//      @include position(absolute, $top: 5px, $left: 10px);
+//      width: 10px;
+//      height: 16px;
+//      border-width: 0 3px 3px 0;
+//    }
+//  }
+//}
 
 @media screen and (min-width: $screen-sm) {
   body {
