feature: experience and education

--- a/assets/css/_layout.shared.scss
+++ b/assets/css/_layout.shared.scss
@@ -92,6 +92,7 @@ a, button {
 
 .button-green-text {
   color: $green-main;
+  background-color: transparent;
   font-weight: 600;
   height: 40px;
 
