feature: web content

--- a/assets/css/_base.variables.scss
+++ b/assets/css/_base.variables.scss
@@ -4,8 +4,11 @@ $green-secondary: #7AC142;
 $green-dark: #2EC350;
 $green-light: #C6E5AA;
 $blue-main: #0069D9;
+$blue-title: #3F9CD7;
 $red-main: #FF2151;
 $brown-main: #9C652C;
+$brown-light: #F99E37;
+$orange-light: #EFEA3F;
 $white-opaque: rgba(255, 255, 255, 0.6);
 
 /* grey colors */
