feature: completed front-end logic

--- a/assets/css/_base.variables.scss
+++ b/assets/css/_base.variables.scss
@@ -1,7 +1,10 @@
 /* other colors */
 $green-main: #7ED321;
 $green-secondary: #7AC142;
-$green-dark: #2EC350;
+$green-third: #2EC350;
+$green-forth: #37B553;
+$green-fifth: #17C912;
+$green-dark: #2AC125;
 $green-light: #C6E5AA;
 $blue-main: #0069D9;
 $blue-title: #3F9CD7;
@@ -20,7 +23,8 @@ $grey-text-medium: #666567;
 $grey-line: #CFD3DE;
 $grey-pale: #DEDEDE;
 $grey-pale-light: #ABACAD;
-$grey-dark-opaque: rgba(151, 140, 159, 0.4);
+$grey-dark-opaque: rgba(35, 31, 32, 0.9);
+$grey-secondary-opaque: rgba(151, 140, 159, 0.4);
 $grey-medium-opaque: rgba(192, 192, 192, 0.5);
 $grey-light-opaque: rgba(247, 247, 247, 0.5);
 $grey-shadow-opaque: rgba(215, 215, 215, 0.5);
