--- a/assets/css/_base.mixins.scss
+++ b/assets/css/_base.mixins.scss
@@ -263,7 +263,7 @@
 @mixin grid($column: 4, $gap: 10px) {
   display: grid;
   grid-gap: $gap;
-  @include col-repeat(auto, $column);
+  grid-template-columns: repeat($column, 1fr);
 }
 
 @mixin grid-gap($column: 4, $colGap: 10px, $rowGap: 10px) {
