--- a/assets/css/_layout.shared.scss
+++ b/assets/css/_layout.shared.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:400,500,600,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900');
 @import "./base.variables";
 @import "./base.mixins";
 
@@ -38,7 +39,7 @@ h1, h2, h3, h4, h5, h6, p, span, th, td {
   color: $grey-text;
 }
 
-.text-orange {
+.text-green {
   color: $green-main;
 }
 
@@ -72,11 +73,11 @@ a, button {
 }
 
 .button-green {
+  height: 40px;
   padding: 0 20px;
   background-color: $green-main;
   color: white;
   font-weight: 600;
-  height: 40px;
   line-height: 40px;
   @include border-radius(8px);
   text-transform: uppercase;
@@ -91,21 +92,44 @@ a, button {
 }
 
 .button-green-text {
+  height: 40px;
   color: $green-main;
   background-color: transparent;
   font-weight: 600;
-  height: 40px;
 
   &:hover {
     color: $green-main;
   }
 }
 
+.button-white-text {
+  height: 40px;
+  color: white;
+  background-color: transparent;
+  font-weight: 600;
+
+  &:hover {
+    color: white;
+  }
+}
+
+.button-white-border {
+  height: 40px;
+  color: white;
+  background-color: transparent;
+  font-weight: 600;
+  border: 2px solid white;
+
+  &:hover {
+    color: white;
+  }
+}
+
 .button-blue {
+  height: 40px;
   background-color: $blue-main;
   color: white;
   font-weight: 600;
-  height: 40px;
   @include border-radius(8px);
 
   &:hover {
@@ -114,11 +138,11 @@ a, button {
 }
 
 .button-red {
+  height: 40px;
   padding: 0 20px;
   background-color: $red-main;
   color: white;
   font-weight: 600;
-  height: 40px;
   @include border-radius(8px);
 
   &:hover {
@@ -127,10 +151,10 @@ a, button {
 }
 
 .button-white {
+  height: 40px;
   background-color: white;
   color: $grey-text;
   font-weight: 600;
-  height: 40px;
   border: 1px solid $grey-text-input;
   @include border-radius(8px);
 
@@ -183,87 +207,45 @@ textarea {
   }
 }
 
-/* custom checkbox */
-//.check-label {
-//  margin-top: 8px;
-//  display: block;
-//  position: relative;
-//  cursor: pointer;
-//  padding-left: 35px;
-//  margin-bottom: 12px;
-//  color: $grey-dark;
-//  @include user-select(none);
-//
-//  &:checked {
-//    color: $green-main;
-//  }
-//
-//  input {
-//    position: absolute;
-//    opacity: 0;
-//    cursor: pointer;
-//
-//    &:checked ~ .check-mark {
-//      background-color: $green-main;
-//      border: none;
-//
-//      &:after {
-//        display: block;
-//      }
-//    }
-//  }
-//
-//  .check-mark {
-//    @include position(absolute, $top: 2px, $left: 0);
-//    @include border-radius(4px);
-//    height: 20px;
-//    width: 20px;
-//    border: 2px solid $green-main;
-//    background-color: white;
-//
-//    &:after {
-//      content: "";
-//      display: none;
-//      @include position(absolute, $top: 2px, $left: 6px);
-//      width: 8px;
-//      height: 12px;
-//      border: solid white;
-//      border-width: 0 2px 2px 0;
-//      @include rotate(45deg);
-//    }
-//  }
-//
-//  .check-mark-error {
-//    @extend .check-mark;
-//    border: 2px solid $red-main;
-//  }
-//}
-//
-//.check-label-round {
-//  @extend .check-label;
-//  margin-top: 0;
-//
-//  input {
-//    @include position(absolute, $right: 100%);
-//    opacity: 0;
-//  }
-//
-//  .check-mark {
-//    @include border-radius(50%);
-//    height: 30px;
-//    width: 30px;
-//
-//    &:after {
-//      @include position(absolute, $top: 5px, $left: 10px);
-//      width: 10px;
-//      height: 16px;
-//      border-width: 0 3px 3px 0;
-//    }
-//  }
-//}
+/*ux element styles*/
+.spinner {
+  height: 50px;
+  width: 50px;
+  @include center-element-fixed();
+  z-index: 500;
+
+  .fa-spinner {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    color: $green-main;
+  }
+}
+
+/* This is the class name given by the Font Awesome component when icon contains 'spinner' */
+.fa-spinner {
+  /* Apply 'spinner' keyframes looping once every second (1s)  */
+  animation: spinner 1.5s linear infinite;
+}
+
+/* Define an animation behavior */
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
 
 @media screen and (min-width: $screen-sm) {
   body {
     font-size: 1rem;
   }
+}
+
+@media screen and (min-width: $screen-md) {
+}
+
+@media screen and (min-width: $screen-lg) {
+}
+
+@media screen and (min-width: $screen-xl) {
 }
