--- a/assets/css/_layout.shared.scss
+++ b/assets/css/_layout.shared.scss
@@ -13,8 +13,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.full-page-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.page-wrapper {
+  flex-grow: 1;
+}
+
 * {
-  scrollbar-color: $green-main $green-light;
+  scrollbar-color: $green-main-1 $green-pale-1;
   scrollbar-width: thin;
 
   &::-webkit-scrollbar {
@@ -22,13 +32,19 @@ body {
   }
 
   &::-webkit-scrollbar-track {
-    background-color: $green-light;
+    background-color: $green-pale-1;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: $green-main;
+    background-color: $green-main-1;
     @include border-radius(4px);
   }
+}
+
+/** scrollbar for firefox **/
+html, div {
+  scrollbar-color: $green-main-1 $green-pale-1;
+  scrollbar-width: thin;
 }
 
 /* text */
@@ -36,17 +52,17 @@ h1, h2, h3, h4, h5, h6, p, span, th, td {
   font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: $grey-text;
+  color: $grey-medium-4;
 }
 
 .text-green {
-  color: $green-main;
+  color: $green-main-1;
 }
 
 .page-title {
   font-size: 2rem;
   font-weight: 900;
-  color: $grey-title;
+  color: $grey-dark-1;
 }
 
 /* buttons */
@@ -56,6 +72,9 @@ a, button {
   -moz-osx-font-smoothing: grayscale;
   text-decoration: none;
   border: none;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
 
   &:hover {
     text-decoration: none;
@@ -75,7 +94,7 @@ a, button {
 .button-green {
   height: 40px;
   padding: 0 20px;
-  background-color: $green-main;
+  background-color: $green-main-1;
   color: white;
   font-weight: 600;
   line-height: 40px;
@@ -93,12 +112,24 @@ a, button {
 
 .button-green-text {
   height: 40px;
-  color: $green-main;
+  color: $green-main-1;
   background-color: transparent;
   font-weight: 600;
 
   &:hover {
-    color: $green-main;
+    color: $green-main-1;
+  }
+}
+
+.button-green-border {
+  height: 40px;
+  color: $green-main-1;
+  background-color: transparent;
+  font-weight: 600;
+  border: 2px solid $green-main-1;
+
+  &:hover {
+    color: $green-main-1;
   }
 }
 
@@ -127,7 +158,7 @@ a, button {
 
 .button-blue {
   height: 40px;
-  background-color: $blue-main;
+  background-color: $blue-dark-1;
   color: white;
   font-weight: 600;
   @include border-radius(8px);
@@ -153,13 +184,13 @@ a, button {
 .button-white {
   height: 40px;
   background-color: white;
-  color: $grey-text;
+  color: $grey-medium-4;
   font-weight: 600;
-  border: 1px solid $grey-text-input;
+  border: 1px solid $grey-medium-9;
   @include border-radius(8px);
 
   &:hover {
-    color: $grey-text;
+    color: $grey-medium-4;
   }
 }
 
@@ -168,7 +199,7 @@ input, select, textarea {
   width: 100%;
 
   @include placeholder {
-    color: $green-light;
+    color: $green-pale-1;
   }
 
   &:focus {
@@ -218,7 +249,7 @@ textarea {
     position: relative;
     width: 50px;
     height: 50px;
-    color: $green-main;
+    color: $green-main-1;
   }
 }
 
