--- a/assets/css/_base.variables.scss
+++ b/assets/css/_base.variables.scss
@@ -29,6 +29,7 @@ $grey-pale-e: #EDEDED;
 $grey-pale-f: #FBFBFB;
 $grey-opaque-03: rgba(35, 31, 32, 0.9);
 $grey-opaque-07: rgba(72, 72, 72, 0.5);
+$grey-opaque-09: rgba(96, 96, 96, 0.5);
 $grey-opaque-15: rgba(151, 140, 159, 0.4);
 $grey-opaque-19: rgba(192, 192, 192, 0.5);
 $grey-opaque-21: rgba(215, 215, 215, 0.5);
