--- a/assets/css/_layout.shared.scss
+++ b/assets/css/_layout.shared.scss
@@ -1,5 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900');
 @import url('https://fonts.googleapis.com/css?family=Nunito+Sans:400,500,600,700,800,900');
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900');
 @import "./base.variables";
 @import "./base.mixins";
 
@@ -48,8 +48,8 @@ html, div {
 }
 
 /* text */
-h1, h2, h3, h4, h5, h6, p, span, th, td {
-  font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: $grey-medium-4;
