Feature: updated main green color, improved the use of rem in styling, changed resume design, added new pictures.

--- a/assets/css/_base.variables.scss
+++ b/assets/css/_base.variables.scss
@@ -1,8 +1,7 @@
 /* other colors */
-$green-main-1: #7ED321;
+$green-main-1: #37B553;
 $green-main-2: #7AC142;
 $green-3: #2EC350;
-$green-4: #37B553;
 $green-5: #17C912;
 $green-6: #2AC125;
 $green-pale-1: #C6E5AA;
